@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-11T08:09:34Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 5, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2023-08-11T16:08:52Z",
+  "count" : 8,
+  "count_minmax" : [ 6, 8 ],
+  "count_decinc" : [ -0, +8 ],
+  "uniques" : 7,
+  "uniques_minmax" : [ 5, 7 ],
+  "uniques_decinc" : [ -0, +7 ]
 }
