@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-11T08:09:34Z",
-  "count_outdated" : 4879,
-  "uniques_outdated" : 1441,
-  "count" : 4990,
-  "uniques" : 1516,
+  "timestamp" : "2023-08-11T16:08:52Z",
+  "count_outdated" : 4883,
+  "uniques_outdated" : 1443,
+  "count" : 4992,
+  "uniques" : 1518,
   "clones" : [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 3, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 2,
@@ -115,12 +106,12 @@
     },
     {
       "timestamp": "2023-08-11T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "count": 8,
+      "count_minmax": [ 6, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 7,
+      "uniques_minmax": [ 5, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
