@@ -1,12 +1,7 @@
 {
-  "count": 108,
-  "uniques": 58,
+  "count": 109,
+  "uniques": 60,
   "clones": [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 2,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2023-08-11T00:00:00Z",
-      "count": 6,
-      "uniques": 5
+      "count": 8,
+      "uniques": 7
     }
   ]
 }
